--- a/js/demo/demo.scss
+++ b/js/demo/demo.scss
@@ -1,7 +1,13 @@
 .main {
-    padding: 3em;
+    padding-top: 2em;
+    padding-left: 8em;
+    padding-right: 8em;
 
-    @media (max-width:400px) {
+    @media (max-width: 800px) {
+        padding: 2em;
+    }
+
+    @media (max-width: 400px) {
         padding: 0.5em;
     }
 }
@@ -17,8 +23,17 @@ button {
     font-size: 16px;
 }
 
-a { color: inherit; } 
+a {
+    color: inherit;
+}
 
-h1 {
+.header {
+    h1 {
+        margin-bottom: 1em;
+    }
+    margin-bottom: 1em;
+}
+
+.text-margin {
     margin-bottom: 1em;
 }
