--- a/js/demo/demo.scss
+++ b/js/demo/demo.scss
@@ -2,6 +2,7 @@
     padding-top: 2em;
     padding-left: 8em;
     padding-right: 8em;
+    padding-bottom: 2em;
 
     @media (max-width: 800px) {
         padding: 2em;
